--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1hpFf_-gDNosbWBLGBNnnKwty5kqHXtfOQA&s" />
+    <link rel="icon" type="image/svg+xml" href="https://e7.pngegg.com/pngimages/635/1012/png-clipart-fusion-cuisine-burrito-restaurant-food-lunch-icon-angle-kitchen-thumbnail.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food cash</title>
   </head>
