--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://e7.pngegg.com/pngimages/635/1012/png-clipart-fusion-cuisine-burrito-restaurant-food-lunch-icon-angle-kitchen-thumbnail.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food cash</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/icons.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Food cash</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
